--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>agile-company-flow</title>
+    <title>Maxmoc Dashboard</title>
 
     <meta property="og:title" content="agile-company-flow" />
     <meta property="og:type" content="website" />
